--- a/assets/css/new.html
+++ b/assets/css/new.html
@@ -9,59 +9,13 @@
     <body>
         <h1>
             new hôm nay là thứ mấy Lorem ipsum, dolor sit amet consectetur
-            adipisicing elit. Quam commodi maxime excepturi, modi exercitationem
-            aspernatur praesentium voluptatum iste, iure ipsa deleniti.
-            Assumenda a ex qui sunt quod atque officia quibusdam ducimus ea ab
-            incidunt tempore nobis nostrum, vel omnis labore exercitationem
-            distinctio inventore cum doloremque? Placeat temporibus perferendis,
-            amet impedit alias eum delectus voluptatum quisquam voluptatibus
-            illum quidem ullam voluptas quasi ipsa deleniti dolor accusamus vero
-            perspiciatis repellendus iste quaerat velit nihil officia iure.
-            Repudiandae eveniet provident esse alias, quo eligendi tenetur dolor
-            aperiam? Ipsam facilis unde animi inventore aliquid, asperiores
-            similique sed facere! Ea quibusdam necessitatibus maxime consectetur
-            suscipit autem atque soluta doloremque, nihil laboriosam impedit.
-            Dolore iusto corporis pariatur quae, velit exercitationem beatae?
-            Ipsam harum aliquam aspernatur eos quo ex perferendis totam
-            voluptate voluptatum, quisquam sint dolores accusamus labore ad non
-            repellendus tempora et, optio hic distinctio? Fuga sunt nemo
-            obcaecati sed rerum possimus eveniet, ullam pariatur explicabo porro
-            saepe inventore fugit tempore eaque quaerat, cupiditate incidunt
-            reiciendis sit nam quis facere quod dolore. Deserunt, cumque.
-            Tempora, facilis. Earum, optio exercitationem adipisci quas
-            repellendus est aliquam deleniti quam hic libero cum ipsam eos
-            itaque animi, similique nobis veritatis quo possimus. Cum veniam
-            totam molestias, eligendi saepe maiores minus temporibus,
-            aspernatur, tenetur quas ipsam accusantium sint distinctio ipsum
-            quasi sequi! In, ad quia recusandae minima, veritatis inventore
-            quasi sunt unde suscipit aliquid eaque at earum ratione rerum iste
-            dicta quod ut nesciunt esse veniam maiores, nam consectetur
-            quibusdam sint! Dolores, asperiores! Perspiciatis a inventore vitae
-            alias tenetur voluptatibus cupiditate neque exercitationem itaque
-            doloribus architecto, autem quaerat reiciendis nisi perferendis
-            numquam molestiae ipsa ut ex repellendus, ratione nesciunt
-            laudantium nulla! Nihil ex voluptas perferendis nostrum facilis!
-            Saepe accusamus sit optio expedita esse totam sed sequi omnis
-            consequuntur possimus dignissimos, aliquid, eveniet molestiae!
-            Consectetur, similique! Consequatur, animi. Cupiditate libero at
-            soluta sint a in, suscipit quos adipisci minus laudantium eos nisi
-            voluptates deserunt optio molestias omnis eveniet necessitatibus
-            eligendi repellendus temporibus provident et rerum quia tempora?
-            Ipsam fugiat odio non! Quasi id facere earum nihil fugit beatae
-            necessitatibus dignissimos nulla excepturi, quisquam impedit
-            suscipit quas aliquid, nam ab quos praesentium officiis? Eius libero
-            obcaecati, magni est corporis harum inventore molestiae cum,
-            exercitationem ullam impedit perspiciatis, saepe minima beatae iste
-            earum animi placeat fugiat incidunt. At eaque deleniti eos eum?
-            Asperiores, ab quas temporibus magnam dolore dolorem iste dicta
-            reiciendis autem officia repellendus mollitia id deserunt quo saepe,
-            ut velit, optio aspernatur iure dolores a. Aliquid maiores quibusdam
-            quod fugiat doloribus, repellendus iure tempore excepturi vitae
-            laudantium totam in rem aut aliquam est dolores earum possimus quae
-            eum, tempora cupiditate a. Quam sequi blanditiis tempore neque dolor
-            explicabo beatae, quasi tenetur in sunt, iusto et pariatur nobis!
-            Sint cumque ipsam, aperiam minima consequatur tempora earum. Ducimus
-            a
+            <div class="a">
+                <ul>
+                    <li>
+                        <img src="" alt="" class="icon">
+                    </li>
+                </ul>
+            </div>
         </h1>
     </body>
 </html>
