--- a/assets/css/new.html
+++ b/assets/css/new.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>
-            new hôm nay là thứ mấy Lorem ipsum, dolor sit amet consectetur
+            new hôm nay là thứ 5 mấy Lorem ipsum, dolor sit amet consectetur
             <div class="a">
                 <ul>
                     <li>
